New Gatherer / DB / Web UI parameter: --group
Meant for cases where one needs to run many gatherer instances each with
a subset of "databases under monitoring" a.k.a. sharding

--- a/webpy/templates/dbs.html
+++ b/webpy/templates/dbs.html
@@ -83,6 +83,7 @@
                 <td title="NB! Password is stored in plain-text in the database">DB password</td>
                 <td title="NB! If checked pgwatch daemon will automatically try to create the CPU load monitoring and stat_statements helper">Is superuser?</td>
                 <td title="libpq 'sslmode' parameter. If 'require' or 'verify-full' then no metrics will be gathered if safe connection cannot be established">SSL Mode</td>
+                <td title="Group name (e.g. 'prod') for logical distinction of monitored databases. Can be used also to run multiple gatherers (sharding), one for each (or multiple) group(s). Required">Group</td>
                 <td title="Preset config OR custom config needs to be specified">Preset config</td>
                 <td title='{"metric":interval_seconds,...}'>Custom config</td>
                 <td title='User defined tags for extra meaning in InfluxDB e.g. {"env": "prod", "app": "xyz"}'>Custom tags</td>
@@ -121,6 +122,7 @@
                             <option value="verify-full"{% if row['md_sslmode'] == "verify-full" %}selected{% endif %}>verify-full</option>
                         </select>
                     </td>
+                    <td><input type="text" name="md_group" value="{{row['md_group']|e}}" size="4"></td>
                     <td>
                         <select name="md_preset_config_name">
                             <option value="" title="Empty. 'Custom config' must be filled" ></option>
@@ -168,6 +170,7 @@
                             <option value="verify-full">verify-full</option>
                         </select>
                     </td>
+                    <td><input type="text" name="md_group" value="default" size="4"></td>
                     <td>
                         <select name="md_preset_config_name" id="md_preset_config_name">
                             <option value="" title="Empty. 'Custom config' must be filled" ></option>
